@@ -182,14 +182,13 @@ Antarctica:               13:  74:  SA:  -65.00:    64.00:    -4.0:  CE9:
     ANT,AX0,FT0Y(30)[70],FT2Y(30)[70],FT4Y(30)[70],FT5Y(30)[70],FT8Y(30)[70],
     LU1Z[73],R1AN,VH0(39)[69],VI0(39)[69],VJ0(39)[69],VK0(39)[69],VL0(39)[69],
     VM0(39)[69],VN0(39)[69],VZ0(39)[69],ZL0(30)[71],ZL5(30)[71],ZM5(30)[71],
-    ZS7(38)[67],8J1RF(39)[67],8J1RL(39)[67],9V0A,CE9/R7C(30)[71],
-    CE9/VK0LD[73],DP0GVN(38)[67],DP1POL(38)[67],EM1HO[73],EM1KGG[73],EM1U[73],
-    EM1UC[73],IA0PS(30)[71],II0AMZS(30)[71],IR0PS(30)[71],K2ARB/KC4(30)[71],
-    K9PET/KC4,KC4/K2ARB(30)[71],KC4/R7C(39),KC4AAA(39),KC4AAC[73],
-    KC4AAF(30)[71],KC4USB(12)[72],KC4USV(30)[71],KC4USX(30)[71],LU4ZS[73],
-    R1ANB(29)[73],R1ANC(29)[73],R1AND(38)[67],R1ANN(38)[67],R1ANT(29)[69],
-    R1ANZ(29)[73],VP8BF[73],VP8CTR,VP8DJB[73],VP8DKF(30)[71],VP8PJ[73],
-    VP8ROT[73],VU3BPZ(38)[67],W1MRQ/KC4(30)[71],W3ASA/KC4,W3WKO/KC4,W3WKP/KC4;
+    ZS7(38)[67],8J1RF(39)[67],8J1RL(39)[67],9V0A,CE9/VK0LD[73],DP0GVN(38)[67],
+    DP1POL(38)[67],EM1HO[73],EM1KGG[73],EM1U[73],EM1UC[73],IA0PS(30)[71],
+    II0AMZS(30)[71],IR0PS(30)[71],K2ARB/KC4(30)[71],KC4/K2ARB(30)[71],
+    KC4AAA(39),KC4AAC[73],KC4AAF(30)[71],KC4USB(12)[72],KC4USV(30)[71],
+    KC4USX(30)[71],LU4ZS[73],R1ANB(29)[73],R1ANC(29)[73],R1AND(38)[67],
+    R1ANN(38)[67],R1ANT(29)[69],R1ANZ(29)[73],VP8BF[73],VP8CTR,VP8DJB[73],
+    VP8DKF(30)[71],VP8PJ[73],VP8ROT[73],VU3BPZ(38)[67],W1MRQ/KC4(30)[71];
 Cuba:                     08:  11:  NA:   23.10:    82.40:     5.0:  CM:
     CL,CM,CO,T4;
 Morocco:                  33:  37:  AF:   33.60:     7.50:     0.0:  CN:
@@ -214,7 +213,7 @@ Cape Verde:               35:  46:  AF:   14.90:    23.50:     1.0:  D4:
     D4;
 Comoros:                  39:  53:  AF:  -11.80:   -43.70:    -3.0:  D6:
     D6;
-Fed. Rep. of Germany:     14:  28:  EU:   51.00:   -10.00:    -1.0:  DL:
+Germany:                  14:  28:  EU:   51.00:   -10.00:    -1.0:  DL:
     DA,DB,DC,DD,DE,DF,DG,DH,DI,DJ,DK,DL,DM,DN,DO,DP,DQ,DR;
 Philippines:              27:  50:  OC:   14.60:  -121.00:    -8.0:  DU:
     4D,4E,4F,4G,4H,4I,DU,DV,DW,DX,DY,DZ;
@@ -255,8 +254,8 @@ Turkmenistan:             17:  30:  AS:   38.00:   -58.40:    -5.0:  EZ:
 France:                   14:  27:  EU:   48.80:    -2.30:    -1.0:  F:
     F,HW,HX,HY,TH,TM,TP,TQ,TV,TW,4U60UO;
 Guadeloupe:               08:  11:  NA:   16.00:    61.70:     4.0:  FG:
-    FG,TO1T,TO2ANT,TO2FG,TO2OOO,TO4T,TO5BG,TO5C,TO5G,TO5GI,TO5ROM,TO5S,TO7ACR,
-    TO7AES,TO7DSR,TO7GAS,TO7T,TO8CW,TO8RR,TO9T;
+    FG,TO1T,TO2ANT,TO2FG,TO2OOO,TO4T,TO5BG,TO5C,TO5G,TO5GI,TO5ROM,TO5S,TO6T,
+    TO7ACR,TO7AES,TO7DSR,TO7GAS,TO7T,TO8CW,TO8RR,TO9T;
 Mayotte:                  39:  53:  AF:  -13.00:   -45.30:    -3.0:  FH:
     FH,TO8MZ,TX0P,TX5M,TX5NK,TX5T,TX6A;
 French St. Martin:        08:  11:  NA:   18.10:    63.10:     4.0:  FJ:
@@ -311,17 +310,18 @@ Jersey:                   14:  27:  EU:   49.30:     2.20:     0.0:  GJ:
 Scotland:                 14:  27:  EU:   55.80:     4.30:     0.0:  GM:
     2A,2M,2S,2T,GM,GS,MM,MS,GB0AC,GB0BNC,GB0DGL,GB0FFS,GB0FLA,GB0GDS,GB0GEI,
     GB0GHD,GB0GKR,GB0GNE,GB0HHW,GB0KGS,GB0KTC,GB0LCS,GB0MLM,GB0NHL,GB0OS,
-    GB0OYT,GB0QWM,GB0SHP,GB0SK,GB0SKY,GB0SS,GB0SSF,GB100MAS,GB125BRC,GB150NRL,
-    GB1FVT,GB2AST,GB2AYR,GB2CHG,GB2DHS,GB2ELH,GB2FBM,GB2FIO,GB2FSM,GB2GNL,
-    GB2HI,GB2HRH,GB2HST,GB2HSW,GB2IAS,GB2IGS,GB2IOC,GB2IOG,GB2IOT,GB2JUNO,
-    GB2KDS,GB2KHL,GB2LAY,GB2LBN,GB2LCL,GB2LCP,GB2LMG,GB2LNM,GB2LO,GB2LP,GB2LS,
-    GB2LSS,GB2LT,GB2LTN,GB2MAS,GB2MOD,GB2MOF,GB2MSL,GB2MUL,GB2NAG,GB2NBC,
-    GB2NCL,GB2NEF,GB2NL,GB2NTS,GB2OWM,GB2OYC,GB2PS,GB2RB,GB2RRL,GB2SLH,GB2SSF,
-    GB2STB,GB2TDS,GB2TI,GB2WBB,GB3GM,GB400CA,GB4AAS,GB4CGW,GB4DAS,GB4GM,
-    GB4LNM,GB4NFE,GB4PMS,GB4RAF,GB4SLH,GB4TSR,GB4ZBS,GB50ATC,GB50SWL,GB5AST,
-    GB5CO,GB5FHC,GB5OL,GB5RO,GB5SI,GB5TI,GB60BBC,GB60CRB,GB60NTS,GB6MI,GB6SA,
-    GB6SM,GB6TAA,GB6WW,GB700BSB,GB75GD,GB75SCP,GB75STT,GB8AYR,GB8CA,GB8CF,
-    GB8CI,GB8CM,GB8CN,GB8CO,GB8CY,GB8FF,GB8OO,GB8RU,GB93AM,MM/DL6MHW;
+    GB0OYT,GB0PPE,GB0QWM,GB0RBS,GB0SHP,GB0SK,GB0SKY,GB0SS,GB0SSF,GB100MAS,
+    GB125BRC,GB150NRL,GB1FVT,GB2AGG,GB2AST,GB2AYR,GB2CHG,GB2DHS,GB2ELH,GB2FBM,
+    GB2FIO,GB2FSM,GB2GNL,GB2GTM,GB2HI,GB2HRH,GB2HST,GB2HSW,GB2IAS,GB2IGS,
+    GB2IOC,GB2IOG,GB2IOT,GB2JUNO,GB2KDS,GB2KHL,GB2LAY,GB2LBN,GB2LCL,GB2LCP,
+    GB2LGB,GB2LMG,GB2LNM,GB2LO,GB2LP,GB2LS,GB2LSS,GB2LT,GB2LTN,GB2MAS,GB2MOD,
+    GB2MOF,GB2MSL,GB2MUL,GB2NAG,GB2NBC,GB2NCL,GB2NEF,GB2NL,GB2NTS,GB2OWM,
+    GB2OYC,GB2PS,GB2RB,GB2RRL,GB2SKG,GB2SLH,GB2SSF,GB2STB,GB2TDS,GB2TI,GB2WBB,
+    GB3GM,GB400CA,GB4AAS,GB4CGW,GB4DAS,GB4GM,GB4LNM,GB4NFE,GB4PMS,GB4RAF,
+    GB4SLH,GB4TSR,GB4ZBS,GB50ATC,GB50SWL,GB5AST,GB5CO,GB5FHC,GB5OL,GB5RO,
+    GB5SI,GB5TI,GB60BBC,GB60CRB,GB60NTS,GB6MI,GB6SA,GB6SM,GB6TAA,GB6WW,
+    GB700BSB,GB75GD,GB75SCP,GB75STT,GB8AYR,GB8CA,GB8CF,GB8CI,GB8CM,GB8CN,
+    GB8CO,GB8CY,GB8FF,GB8OO,GB8RU,GB93AM,MM/DL6MHW;
 Shetlands:                14:  27:  EU:   60.40:     1.50:     0.0:  *GM/s:
     GZ,MZ,2M1ANT,2M1ASQ,2M1ODL,GM0DJI,GM0EKM,GM0ILB,GM0MZD,GM0VFA,GM1CBQ,
     GM1KKI,GM1ZNR,GM3KLA,GM3STU,GM3WCH,GM3WHT,GM3XPQ,GM3ZET,GM3ZNM,GM3ZXH,
@@ -331,14 +331,14 @@ Shetlands:                14:  27:  EU:   60.40:     1.50:     0.0:  *GM/s:
 Guernsey:                 14:  27:  EU:   49.50:     2.70:     0.0:  GU:
     2P,2U,GP,GU,MP,MU,GB0GUC,GB0JAG,GB0ON,GB2ECG,GB2GU,GB50LIB;
 Wales:                    14:  27:  EU:   51.50:     3.20:     0.0:  GW:
-    2C,2W,2X,2Y,GC,GW,MC,MW,GB0CCE,GB0CLC,GB0GCR,GB0GLV,GB0HEL,GB0HMT,GB0ML,
-    GB0MPA,GB0MWL,GB0NEW,GB0PSG,GB0RPO,GB0RSC,GB0SDD,GB0SH,GB0SPS,GB0SRH,
-    GB0TD,GB0WRC,GB100BD,GB100FI,GB100LP,GB1CCC,GB1LSG,GB1SSL,GB1TDS,
-    GB2000SET,GB200HNT,GB2ANG,GB2CPC,GB2GGM,GB2GLS,GB2GOL,GB2GSG,GB2GSS,
-    GB2IMD,GB2LNP,GB2LSA,GB2MIL,GB2MLM,GB2MOP,GB2RFS,GB2RSC,GB2RTB,GB2SDD,
-    GB2SIP,GB2TD,GB2VK,GB2WFF,GB4BPL,GB4CI,GB4DPS,GB4HMD,GB4LSG,GB4MD,GB4MDI,
-    GB4SA,GB4SMM,GB4SNF,GB4XXX,GB5BS/J,GB5FI,GB5SIP,GB60VLY,GB6AR,GB750CC,
-    GB8OQE;
+    2C,2W,2X,2Y,GC,GW,MC,MW,GB0CCE,GB0CLC,GB0CVA,GB0GCR,GB0GIW,GB0GLV,GB0HEL,
+    GB0HMT,GB0ML,GB0MPA,GB0MWL,GB0NEW,GB0PSG,GB0RPO,GB0RSC,GB0SDD,GB0SH,
+    GB0SOA,GB0SPS,GB0SRH,GB0TD,GB0WRC,GB100BD,GB100FI,GB100LP,GB1CCC,GB1LSG,
+    GB1SSL,GB1TDS,GB2000SET,GB200HNT,GB2ANG,GB2CPC,GB2GGM,GB2GLS,GB2GOL,
+    GB2GSG,GB2GSS,GB2HDG,GB2IMD,GB2LNP,GB2LSA,GB2MIL,GB2MLM,GB2MOP,GB2RFS,
+    GB2RSC,GB2RTB,GB2SDD,GB2SIP,GB2TD,GB2TTA,GB2VK,GB2WDS,GB2WFF,GB2WHO,
+    GB2WSF,GB4BPL,GB4CI,GB4DPS,GB4HMD,GB4HMM,GB4LSG,GB4MD,GB4MDI,GB4NDG,GB4SA,
+    GB4SMM,GB4SNF,GB4XXX,GB5BS/J,GB5FI,GB5SIP,GB60VLY,GB6AR,GB750CC,GB8OQE;
 Solomon Islands:          28:  51:  OC:   -9.40:  -160.00:   -11.0:  H4:
     H4;
 Temotu:                   32:  51:  OC:  -10.70:  -165.80:   -11.0:  H40:
@@ -402,7 +402,7 @@ Japan:                    25:  45:  AS:   35.70:  -139.80:    -9.0:  JA:
     JP,JQ,JR,JS;
 Minami Torishima:         27:  90:  OC:   24.30:  -154.00:   -10.0:  JD/m:
     7J1ACH,JD1/JI7BCD,JD1BIE/JD1,JD1BIP,JD1BIU,JD1BIY,JD1BIZ,JD1BJA,JD1BJE,
-    JD1BME,JD1YAA,JD1YBJ,JE7IZM/JD1,JG8NQJ/JD1,JL1KFR/JD1,JR6TYH/JD1;
+    JD1BME,JD1YAA,JD1YBJ,JG8NQJ/JD1,JL1KFR/JD1,JR6TYH/JD1;
 Ogasawara:                27:  45:  AS:   27.50:  -141.00:   -10.0:  JD/o:
     JD1;
 Mongolia:                 23:  32:  AS:   47.90:  -106.90:    -8.0:  JT:
@@ -418,16 +418,16 @@ Jordan:                   20:  39:  AS:   32.00:   -35.90:    -2.0:  JY:
 United States:            05:  08:  NA:   43.00:    87.90:     5.0:  K:
     4U1WB,AA,AB,AC,AD,AE,AF,AG,AI,AJ,AK,K,N,W,AA0CY(5)[8],AA3VA(4),AB4EJ(4),
     AB4GG(4),AC4PY(4),AD4EB(4),AD8J(5),AE9F(3)[6],AG3V(4)[7],AG4W(4),
-    AH2AK(5)[8],AH6HJ(5)[8],AH6RI(3)[6],AH8M(5)[8],AL1VE(5)[8],AL7C(4)[8],
-    AL7KT(5)[8],AL7O(4)[7],AL7QQ(4)[7],AL7W(3)[6],K0COP(5)[8],K0JJ(3)[6],
-    K0JJM(4)[7],K0JJR(4)[7],K0LUZ(5)[8],K0TV(5)[8],K0TVD(4)[7],K1GU(4),
-    K1GUG(5),K1LKR(3)[6],K1LT(4),K1NG(4),K1NT(4)[7],K1NTR(5)[8],K1TN(4),
-    K1TU(4)[7],K2AAW(4),K2BA(4)[7],K2HT(4)[7],K2HTO(5)[8],K2RD(3)[6],
-    K2VCO(3)[6],K2VV(4)[7],K3CQ(4),K3GP(4),K3IE(4),K3PA(4)[7],K3WT(4)[7],
-    K4AMC(4),K4BEV(4),K4BP(4),K4BX(4),K4BXC(5),K4EJQ(4),K4FXN(4),K4HAL(4),
-    K4IE(4),K4IU(4)[7],K4JA(4),K4JNY(4),K4LTA(4),K4NO(4),K4OAQ(4),K4RO(4),
-    K4SAC(4),K4TD(4),K4VU(3)[6],K4VUD(5)[8],K4WI(4),K4WW(4),K4WX(4),K4XG(4),
-    K4XU(3)[6],K4ZGB(4),K5KG(5)[8],K5MA(5)[8],K5RC(3)[6],K5RR(3)[6],
+    AH0AH(5)[8],AH2AK(5)[8],AH6HJ(5)[8],AH6RI(3)[6],AH8M(5)[8],AL1VE(5)[8],
+    AL7C(4)[8],AL7KT(5)[8],AL7LV(5)[8],AL7O(4)[7],AL7QQ(4)[7],AL7W(3)[6],
+    K0COP(5)[8],K0JJ(3)[6],K0JJM(4)[7],K0JJR(4)[7],K0LUZ(5)[8],K0TV(5)[8],
+    K0TVD(4)[7],K1GU(4),K1GUG(5),K1LKR(3)[6],K1LT(4),K1NG(4),K1NT(4)[7],
+    K1NTR(5)[8],K1TN(4),K1TU(4)[7],K2AAW(4),K2BA(4)[7],K2HT(4)[7],K2HTO(5)[8],
+    K2RD(3)[6],K2VCO(3)[6],K2VV(4)[7],K3CQ(4),K3GP(4),K3IE(4),K3PA(4)[7],
+    K3WT(4)[7],K4AMC(4),K4BEV(4),K4BP(4),K4BX(4),K4BXC(5),K4EJQ(4),K4FXN(4),
+    K4HAL(4),K4IE(4),K4IU(4)[7],K4JA(4),K4JNY(4),K4LTA(4),K4NO(4),K4OAQ(4),
+    K4RO(4),K4SAC(4),K4TD(4),K4VU(3)[6],K4VUD(5)[8],K4WI(4),K4WW(4),K4WX(4),
+    K4XG(4),K4XU(3)[6],K4ZGB(4),K5KG(5)[8],K5MA(5)[8],K5RC(3)[6],K5RR(3)[6],
     K5ZD(5)[8],K5ZDG(4)[7],K6EID(5)[8],K6XT(4)[7],K7ABV(4)[6],K7BG(4)[6],
     K7CMZ(5)[8],K7CS(5)[8],K7GM(5)[8],K7GMF(3)[6],K7IA(4)[7],K7RE(4)[7],
     K7REL(3)[6],K7SV(5)[8],K7TD(4)[7],K7UP(4)[7],K7VU(4)[7],K8AC(5),
@@ -435,34 +435,34 @@ United States:            05:  08:  NA:   43.00:    87.90:     5.0:  K:
     K9FY(5),K9HUY(5),K9JF(3)[6],K9OM(5),K9VV(5),KA2EYH(4),KA8Q(5),KB7Q(4)[6],
     KC3MR(4),KC7UP(4)[6],KD5M(5)[8],KD5MDO(4)[7],KE4MBP(4),KE4OAR(4),
     KE7NO(4)[6],KH2D(5)[8],KH6DX(3)[6],KH6HHS(5)[8],KH6RW(3)[6],KI6DY(4)[7],
-    KK9A(5),KL1IF(4)[8],KL2A/7(3)[6],KL7FDQ(3)[6],KL7XX(4)[8],KM4FO(4),
-    KM6JD(5)[8],KN4Q(4),KN4QS(4)[7],KN5H(3)[6],KN6RO(5)[8],KN8J(5),KO7X(4)[7],
-    KP2N(5)[8],KP4E(4)[8],KS7T(4)[6],KU1CW(4)[7],KU8E(5),KY1V(4),KY4AA(4),
-    KY4Z(4)[7],N0AX(3)[6],N1LN(4)[7],N1SZ(4)[7],N1WI(4),N1ZP(4),N2BJ(4),
-    N2BJL(5),N2IC(4)[7],N2LA(4)[7],N2NB(3)[6],N2WN(4),N3AIU(4)[7],N3BB(4)[7],
-    N3ZZ(3)[6],N4CVO(4),N4DD(4),N4DW(4),N4GK(4),N4GN(4),N4IR(4),N4IRR(5),
-    N4JF(4),N4KG(4),N4KZ(4),N4NO(4),N4OGW(4)[7],N4QS(4),N4SL(3)[6],N4TN(4),
-    N4TZ(4),N4UW(4),N4VV(4),N4XM(4),N4ZZ(4),N6AR(5)[8],N6MW(5)[8],N6MWA(3)[6],
-    N6RFM(5)[8],N6ZO(5)[8],N6ZZ(4)[7],N7DC(5)[8],N7DF(4)[7],N7FLT(4)[6],
-    N7IV(4)[7],N7NG(5)[8],N7VMR(4)[6],N8FF(5),N8II(5),N8NA(5),N8PR(5),N8RA(5),
-    N8WXQ(5),N9ADG(3)[6],NA4K(4),NA4M(4)[7],NA4MA(5)[8],ND2T(3)[6],ND9M(5),
-    NJ4I(4),NL7AU(5)[8],NL7CO(4)[7],NL7XM(5)[8],NP3D(5)[8],NQ4U(4),NU4B(4),
-    NU4BP(5),NW7MT(4)[6],NW8U(5),NX9T(5),NY4N(4),NY6DX(5)[8],W0RLI(3)[6],
-    W0UCE(5)[8],W0YK(3)[6],W0YR(5)[8],W0YRN(4)[7],W0ZZ(3)[6],W0ZZQ(4)[7],
-    W1DY(4)[7],W1DYH(5)[8],W1DYJ(5)[8],W1MVY(3)[6],W1RH(3)[6],W1SRD(3)[6],
-    W2OO(4),W2VJN(3)[6],W3CP(3)[6],W3HDH(4),W4BCG(4),W4CID(4),W4DAN(4),
-    W4DHE(4),W4DVG(4),W4EEH(4),W4EF(3)[6],W4FMS(4),W4GKM(4),W4HZD(4),W4JSI(4),
-    W4KW(4),W4LC(4),W4LIA(4),W4NBS(4),W4NI(4),W4NTI(4),W4NZ(4),W4PA(4),
-    W4RYW(4),W4TDB(4),W4TYU(4),W4YOK(4)[7],W5KI(5)[8],W5REA(5)[8],W6AAN(5)[8],
-    W6DSQ(4)[8],W6FC(5)[8],W6IHG(5)[8],W6JV(5)[8],W6LFB(4)[7],W6NWS(5)[8],
-    W6TER(4)[7],W6UB(4)[8],W6XR(5)[8],W6YJ(4)[7],W7FG(4)[7],W7LPF(5)[8],
-    W7LR(4)[6],W7LRD(3)[6],W7QF(5)[8],W7SE(4)[7],W8AEF(3)[6],W8FJ(5),W8HGH(5),
-    W8TN(5),W8WEJ(5),W8ZA(5),W9GE(5),W9GEN(4),W9IGJ(5),W9MAK(3)[6],
-    W9NGA(3)[6],WA0KDS(3)[6],WA1FCN(4),WA1MKE(4),WA1UJU(4),WA2MNO(4)[7],
-    WA4GLH(4),WA4JA(4),WA4OSD(4),WA5VGI(3)[6],WA8WV(5),WB2ORD(4),WB4YDL(4),
-    WB4ZBI(4),WB6BWZ(5)[8],WB8YQJ(3)[6],WB8YYY(5),WD4K(4),WD4OHD(4),
-    WG7Y(4)[7],WH0AI(4)[8],WJ9B(5),WL7K(3)[6],WN4M(4),WO4O(4),WO5D(5)[8],
-    WP4JBG(4)[8],WS4Y(4)[7],WT5L(5)[8],WX4TM(4);
+    KK9A(5),KL1IF(4)[8],KL2A/7(3)[6],KL7FDQ(3)[6],KL7WP(3)[6],KL7XX(4)[8],
+    KM4FO(4),KM6JD(5)[8],KN4Q(4),KN4QS(4)[7],KN5H(3)[6],KN6RO(5)[8],KN8J(5),
+    KO7X(4)[7],KP2N(5)[8],KP4E(4)[8],KS7T(4)[6],KU1CW(4)[7],KU8E(5),KY1V(4),
+    KY4AA(4),KY4Z(4)[7],N0AX(3)[6],N1LN(4)[7],N1SZ(4)[7],N1WI(4),N1ZP(4),
+    N2BJ(4),N2BJL(5),N2IC(4)[7],N2LA(4)[7],N2NB(3)[6],N2WN(4),N3AIU(4)[7],
+    N3BB(4)[7],N3ZZ(3)[6],N4CVO(4),N4DD(4),N4DW(4),N4GK(4),N4GN(4),N4IR(4),
+    N4IRR(5),N4JF(4),N4KG(4),N4KZ(4),N4NO(4),N4OGW(4)[7],N4QS(4),N4SL(3)[6],
+    N4TN(4),N4TZ(4),N4UW(4),N4VV(4),N4XM(4),N4ZZ(4),N6AR(5)[8],N6MW(5)[8],
+    N6MWA(3)[6],N6RFM(5)[8],N6ZO(5)[8],N6ZZ(4)[7],N7DC(5)[8],N7DF(4)[7],
+    N7FLT(4)[6],N7IV(4)[7],N7NG(5)[8],N7VMR(4)[6],N8FF(5),N8II(5),N8NA(5),
+    N8PR(5),N8RA(5),N8WXQ(5),N9ADG(3)[6],NA4K(4),NA4M(4)[7],NA4MA(5)[8],
+    ND2T(3)[6],ND9M(5),NH7C(5)[8],NJ4I(4),NL7AU(5)[8],NL7CO(4)[7],NL7XM(5)[8],
+    NP3D(5)[8],NQ4U(4),NU4B(4),NU4BP(5),NW7MT(4)[6],NW8U(5),NX9T(5),NY4N(4),
+    NY6DX(5)[8],W0RLI(3)[6],W0UCE(5)[8],W0YK(3)[6],W0YR(5)[8],W0YRN(4)[7],
+    W0ZZ(3)[6],W0ZZQ(4)[7],W1DY(4)[7],W1DYH(5)[8],W1DYJ(5)[8],W1MVY(3)[6],
+    W1RH(3)[6],W1SRD(3)[6],W2OO(4),W2VJN(3)[6],W3CP(3)[6],W3HDH(4),W4BCG(4),
+    W4CID(4),W4DAN(4),W4DHE(4),W4DVG(4),W4EEH(4),W4EF(3)[6],W4FMS(4),W4GKM(4),
+    W4HZD(4),W4JSI(4),W4KW(4),W4LC(4),W4LIA(4),W4NBS(4),W4NI(4),W4NTI(4),
+    W4NZ(4),W4PA(4),W4RYW(4),W4TDB(4),W4TYU(4),W4YOK(4)[7],W5KI(5)[8],
+    W5REA(5)[8],W6AAN(5)[8],W6DSQ(4)[8],W6FC(5)[8],W6IHG(5)[8],W6JV(5)[8],
+    W6LFB(4)[7],W6NWS(5)[8],W6TER(4)[7],W6UB(4)[8],W6XR(5)[8],W6YJ(4)[7],
+    W7FG(4)[7],W7LPF(5)[8],W7LR(4)[6],W7LRD(3)[6],W7QF(5)[8],W7SE(4)[7],
+    W8AEF(3)[6],W8FJ(5),W8HGH(5),W8TN(5),W8WEJ(5),W8ZA(5),W9GE(5),W9GEN(4),
+    W9IGJ(5),W9MAK(3)[6],W9NGA(3)[6],WA0KDS(3)[6],WA1FCN(4),WA1MKE(4),
+    WA1UJU(4),WA2MNO(4)[7],WA4GLH(4),WA4JA(4),WA4OSD(4),WA5VGI(3)[6],WA8WV(5),
+    WB2ORD(4),WB4YDL(4),WB4ZBI(4),WB6BWZ(5)[8],WB8YQJ(3)[6],WB8YYY(5),WD4K(4),
+    WD4OHD(4),WG7Y(4)[7],WH0AI(4)[8],WJ9B(5),WL7K(3)[6],WN4M(4),WO4O(4),
+    WO5D(5)[8],WP4JBG(4)[8],WS4Y(4)[7],WT5L(5)[8],WX4TM(4);
 Guantanamo Bay:           08:  11:  NA:   19.90:    75.20:     5.0:  KG4:
     KG4,KG44;
 Mariana Is.:              27:  64:  OC:   15.20:  -145.80:   -10.0:  KH0:
@@ -537,7 +537,7 @@ Peru:                     10:  12:  SA:  -12.10:    77.10:     5.0:  OA:
 Lebanon:                  20:  39:  AS:   33.90:   -35.50:    -2.0:  OD:
     OD;
 Austria:                  15:  28:  EU:   48.20:   -16.30:    -1.0:  OE:
-    OE,4U1VIC,OE3XHA/VFW06;
+    OE,4U1VIC,OE3XHA/SH75;
 Finland:                  15:  18:  EU:   60.20:   -25.00:    -2.0:  OH:
     OF,OG,OH,OI,OJ;
 Aland Is.:                15:  18:  EU:   60.20:   -20.00:    -2.0:  OH0:
@@ -553,9 +553,9 @@ Belgium:                  14:  27:  EU:   50.90:    -4.40:    -1.0:  ON:
 Greenland:                40:  05:  NA:   62.50:    45.00:     3.0:  OX:
     OX;
 Faroe Is.:                14:  18:  EU:   62.00:     6.80:     0.0:  OY:
-    OY;
+    OW,OY;
 Denmark:                  14:  18:  EU:   55.70:   -12.60:    -1.0:  OZ:
-    5P,5Q,OU,OV,OW,OZ,XP;
+    5P,5Q,OU,OV,OZ,XP;
 Papua New Guinea:         28:  51:  OC:   -9.40:  -147.10:   -10.0:  P2:
     P2;
 Aruba:                    09:  11:  SA:   12.50:    70.00:     4.0:  P4:
@@ -805,7 +805,8 @@ Andaman & Nicobar:        26:  49:  AS:   11.70:   -92.80:    -5.5:  VU4:
     8T4,8U4,8V4,8W4,8X4,8Y4,AT4,AU4,AV4,AW4,VT4,VU4,VV4,VW4,VU3VPX,VU3VPY,
     VU4AN/RBI;
 Laccadive Is.:            22:  41:  AS:   10.00:   -73.00:    -5.5:  VU7:
-    8T7,8U7,8V7,8W7,8X7,8Y7,AT7,AU7,AV7,AW7,VT7,VU7,VV7,VW7;
+    8T7,8U7,8V7,8W7,8X7,8Y7,AT7,AU7,AV7,AW7,VT7,VU7,VV7,VW7,VU7MY/JOS,
+    VU7MY/RBI;
 Mexico:                   06:  10:  NA:   19.40:    99.10:     6.0:  XE:
     4A,4B,4C,6D,6E,6F,6G,6H,6I,6J,XA,XB,XC,XD,XE,XF,XG,XH,XI;
 Revilla Gigedo:           06:  10:  NA:   19.00:   111.50:     7.0:  XF4:
